added profile picture

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </th>
     </thead>
     <tr>
-      <td> <img src="https://www.instagram.com/p/B48S6DLHHlv/" alt="My profile pic"></td>
+      <td> <img src="images/profile.png" alt="My profile pic"></td>
       <td>
         <p> Studying <strong>Computer Engineering</strong></p>
         <p>Here's my <a href="https://github.com/eegbunam"><strong>github</strong></a></p>
