started to add css

--- a/index.html
+++ b/index.html
@@ -4,11 +4,26 @@
 <head>
   <meta charset="utf-8">
   <title>Ebukas Personal Site</title>
+
+  <style media="screen">
+    body {
+      background-color: Beige;
+    }
+    hr {
+      background-color:  white;
+      height: 2px;
+      border-style: solid;
+    }
+
+    img {
+      height: 200px;
+      width: 200px;
+    }
+  </style>
 </head>
 
 <body>
-
-  <table cellSpacing = "10">
+  <table cellSpacing="10">
     <thead>
       <th>
         <h1>Ebuka Egbunam</h1>
@@ -25,11 +40,11 @@
     </tr>
   </table>
   <hr size=2 noshade>
-    <h3>Skills</h3>
-    <table>
+  <h3>Skills</h3>
+  <table>
     <tr>
-    <td>
-        <table cellSpacing = "10">
+      <td>
+        <table cellSpacing="10">
           <tr>
             <td>Swift</td>
             <td>5stars</td>
@@ -43,26 +58,26 @@
             <td>5stars</td>
           </tr>
         </table>
-     </td>
-    <td>
-      <table cellSpacing = "10">
-        <tr>
-          <td>OOP</td>
-          <td>5stars</td>
-        </tr>
-        <tr>
-          <td>MVP</td>
-          <td>5stars</td>
-        </tr>
-        <tr>
-          <td>Memory Managment</td>
-          <td>3stars</td>
-        </tr>
-      </table>
+      </td>
+      <td>
+        <table cellSpacing="10">
+          <tr>
+            <td>OOP</td>
+            <td>5stars</td>
+          </tr>
+          <tr>
+            <td>MVP</td>
+            <td>5stars</td>
+          </tr>
+          <tr>
+            <td>Memory Managment</td>
+            <td>3stars</td>
+          </tr>
+        </table>
 
-    </td>
+      </td>
     </tr>
-    </table>
+  </table>
 
 
   <hr size=2 noshade>
@@ -119,7 +134,7 @@
     <textarea name="Message" rows="6" cols="60">Insert Your Message here </textarea>
     <input type="submit" name=""><br>
   </form>
-    <hr>
+  <hr>
   <p>If you want to see a beatified version of this website click <a href="beauty.html"><i>here</i></a></p>
 </body>
 
