done with internal css

--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
       background-color: Beige;
     }
     hr {
-      background-color:  white;
-      height: 2px;
-      border-style: solid;
+      background-color:  Beige;
+      height: 0px;
+
+      border-style: dotted none none;
+      border-width: 10px;
+      border-color: grey;
+
+
     }
 
     img {
-      height: 200px;
-      width: 200px;
+      height: 100%;
+      width: 100%;
     }
   </style>
 </head>
