added externall css

--- a/index.html
+++ b/index.html
@@ -4,27 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Ebukas Personal Site</title>
-
-  <style media="screen">
-    body {
-      background-color: Beige;
-    }
-    hr {
-      background-color:  Beige;
-      height: 0px;
-
-      border-style: dotted none none;
-      border-width: 10px;
-      border-color: grey;
-
-
-    }
-
-    img {
-      height: 100%;
-      width: 100%;
-    }
-  </style>
+<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
