added  some changes to html file

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <tr>
       <td> <img src="images/profile.png" alt="My profile pic"></td>
       <td>
-        <p> Studying <strong>Computer Engineering</strong></p>
+        <p> Major: <strong>Computer Engineering</strong></p>
         <p>Here's my <a href="https://github.com/eegbunam"><strong>github</strong></a></p>
-        <p>I am an IOS and Web developer currently in my freshmen year at <i>placeholder</i> University</p>
+        <p> IOS and Web developer currently</p>
       </td>
 
     </tr>
@@ -29,18 +29,18 @@
   <table>
     <tr>
       <td>
-        <table cellSpacing="10">
+        <table cellSpacing="30">
           <tr>
             <td>Swift</td>
-            <td>5stars</td>
+            <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
             <td>Pyhton</td>
-            <td>5stars</td>
+            <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>HTML</td>
-            <td>5stars</td>
+            <td>HTML/CSS</td>
+            <td>⭐⭐⭐⭐⭐</td>
           </tr>
         </table>
       </td>
@@ -51,12 +51,12 @@
             <td>5stars</td>
           </tr>
           <tr>
-            <td>MVP</td>
-            <td>5stars</td>
+            <td>MVC(Model View Controller)</td>
+            <td>⭐⭐⭐⭐⭐</td>
           </tr>
           <tr>
-            <td>Memory Managment</td>
-            <td>3stars</td>
+            <td> C </td>
+            <td>⭐⭐⭐⭐</td>
           </tr>
         </table>
 
@@ -67,33 +67,32 @@
 
   <hr size=2 noshade>
 
-  <h4>skills</h4>
 
   <h4>Projects I have wokrked on</h4>
 
   <ol>
-    <li><a href="#">Chop and Chill</a></li>
-    <li><a href="#">Crwdn</a></li>
-    <li><a href="#">Covid19tracker</a></li>
+    <li><a href="https://github.com/Daramfon10/ChopNChill">Chop and Chill (Private Repository)</a></li>
+    <li><a href="https://crwdn.com">Crwdn</a></li>
+    <li><a href="https://github.com/eegbunam/covid-19Tracker">Covid19tracker</a></li>
   </ol>
   <hr size=2 noshade>
   <h4>Work Experience</h4>
-  <table border="1">
+  <table cellSpacing="30">
     <thead>
       <tr>
-        <th>Projects</th>
-        <th>Description</th>
+        <th>Comapany/ProjectName</th>
+        <th>Job Description</th>
       </tr>
 
     </thead>
     <tbody>
       <tr>
         <td>Crwdn</td>
-        <td> work i did at Crwdn</td>
+        <td> IOS developer at Crwnd</td>
       </tr>
       <tr>
         <td>Chop and Chill</td>
-        <td>work i did at chopandchill</td>
+          <td>IOS developer at ChopAndChill</td>
       </tr>
     </tbody>
     <tfoot>
