--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <input type="submit" name=""><br>
   </form>
   <hr>
-  <p>If you want to see a beatified version of this website click <a href="beauty.html"><i>here</i></a></p>
+  <p>If you want to see a beatified version of this website click <a href="beauty/beauty.html"><i>here</i></a></p>
 </body>
 
 </html>
