working on beauty page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <title>Ebukas Personal Site</title>
 <link rel="stylesheet" href="css/style.css">
+<link rel="icon" href="favicon/favicon.ico">
 </head>
 
 <body>
