--- a/beauty/beauty.html
+++ b/beauty/beauty.html
@@ -3,8 +3,25 @@
   <head>
     <meta charset="utf-8">
     <title>This is a nicd verison for the eyes</title>
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>Beauty Page</h1>
+    <div class="top-container">
+        <img src="images/cloud.png>" alt="cloud-img">
+      <h1>Beauty Page</h1>
+      <p>programmer</p>
+        <img src="images/cloud.png>" alt="cloud-img">
+        <img src="images/>mountain.png" alt="mountain-img">
+
+    </div>
+
+    <div class="middle-container">
+
+    </div>
+
+    <div class="last-container">
+
+    </div>
+
   </body>
 </html>
